...
              "X-API-Key": AUTH_KEY,
              "Content-Type": "application/json",
            },
          }
        );

        Alert.alert("Success", "Notification sent to all users successfully");
      } else if (notificationType === "multiple") {
        endpoint = `${API_URL}/notifications/store-notification`;
        pushEndpoint = `${API_URL}/admin/push-notify/notify`;

        // Send database notifications and push notifications to each selected user
        const promises = selectedUsers.map(async (user) => {
...
            {/* Notification Content Section */}
            <Surface className="p-4 rounded-lg mb-4 elevation-2 bg-white border border-gray-300">
              <Text className="font-pmedium text-base mb-3">
                Notification Content
              </Text>
              <TextInput
                label="Title"
                value={title}
                onChangeText={setTitle}
                mode="outlined"
                className="mb-3"
                style={{ backgroundColor: "white" }}
                theme={TEXT_INPUT_THEME}
              />
              <TextInput
                label="Body"
                value={body}
                onChangeText={setBody}
                mode="outlined"
                multiline
                numberOfLines={3}
                className="mb-3"
...
              loading={loading}
              disabled={loading}
              icon="send"
              className="mt-3"
              style={{ backgroundColor: PRIMARY_COLOR, borderRadius: 16 }}
            >
              Send Notification
            </Button>

            <Button
              mode="outlined"
              onPress={resetForm}
              className="mt-3"
...
