...
      <Image
        source={icons.maps}
        resizeMode="contain"
        tintColor="#FFFFFF"
        style={styles.mapsIcon}
      />
      <Text style={styles.mapsText}>Maps</Text>
    </TouchableOpacity>
  );
};

// Create a wrapper component for tabs content to use context
const TabsContent = () => {
...
