...
            borderBottomColor: "#rgba(0, 0, 0, 0.1)"
        }}>
            <TouchableOpacity onPress={() => router.back()}>
                <Icon name="arrow-back" size={24} color="#333" />
            </TouchableOpacity>
            <Text style={{ fontSize: 22, fontWeight: "600", marginLeft: 15,  paddingBottom : 0 }}>
                {isNavigating ? "Navigation" : "Agricultural Stores"}
            </Text>
        </View>
    );

    const renderStoreInfo = () => {
        if (!selectedStore) return null;
...
