...
              width: "100%",
              rowGap: 10,
            }}
          >
            <SimpleCard
              disease="Lorem Ipsumazole"
              num="Joemar Ygot"
              color="#000064"
              handlePress={() =>
                router.push({
                  pathname: "treatment-details",
                  params: { treatment: "Lorem Ipsumazole" },
                })
...
