...
            </Text>
          ) : null}

          {/* Email Input */}
          <TextInput
            testID="emailInput"
            label="Email"
            mode="outlined"
            style={{ width: "100%", marginTop: 10 }}
            onChangeText={handleChangeEmail}
            activeOutlineColor="#006400"
            outlineColor="#CBD2E0"
            textColor="#2D3648"
...
            error={!!error}
          />
          {error && <Text style={{ color: 'red', marginTop: 5 }}>{error}</Text>}

          {/* Send OTP Button */}
          <CustomButton
            title={isSubmitting ? "Sending..." : "Send OTP"}
            containerStyles="w-full mt-6"
            handlePress={handleVerification}
            disabled={isSubmitting || email.trim() === "" || !validateEmail(email)}
          />

          {/* Back to Log-In */}
...
