# User enters incorrect password

appId: host.exp.exponent

---
- launchApp

# Tap on PAL-AI
- tapOn: "PAL-AI"

# Navigate to Login
- tapOn:
    id: "login"

# Tap on Username / Email
- tapOn: "Username / Email"
- inputText: "joemarygot@gmail.com"

- hideKeyboard

- hideKeyboard

# Tap on Login button
- tapOn: "login"

- assertVisible: "Please fill in all fields"
