# Location is enabled and user views store list

appId: host.exp.exponent

---
- launchApp

# Tap on PAL-AI
- tapOn: "PAL-AI"

# Navigate to Login
- tapOn:
    id: "login"

# Tap on Username / Email
- tapOn: "Username / Email"
- inputText: "joemarygot@gmail.com"

- hideKeyboard

# Tap on Password
- tapOn: "Password"
- inputText: "Chaesessional0#"

- hideKeyboard

# Tap on Login button
- tapOn: "login"

# Tap on Maps
- tapOn: "Maps"

# Check if Location is enabled
- assertVisible: "Agricultural Stores"
