# User deletes all notifications

appId: host.exp.exponent

---
- launchApp

# Tap on PAL-AI
- tapOn: "PAL-AI"

# Navigate to Login
- tapOn:
    id: "login"

# Tap on Username / Email
- tapOn: "Username / Email"
- inputText: "joemarygot@gmail.com"

- hideKeyboard

# Tap on Password
- tapOn: "Password"
- inputText: "Chaesessional0#"

- hideKeyboard

# Tap on Login button
- tapOn: "login"

# Tap on Notification
- tapOn: "Notification"

# Tap on Delete Notification
- tapOn:
    id: "deleteNotification"

# Tap On Delete
- tapOn: "DELETE"

# Tap OK
- tapOn: "OK"

# Check if notification is deleted
- assertNotVisible: "No Notifications"
