# No data exists in selected filter

appId: host.exp.exponent

---
- launchApp

# Tap on PAL-AI
- tapOn: "PAL-AI"

# Navigate to Login
- tapOn:
    id: "login"

# Tap on Username / Email
- tapOn: "Username / Email"
- inputText: "Admin"

- hideKeyboard

# Tap on Password
- tapOn: "Password"
- inputText: "Admin@123"

- hideKeyboard

# Tap on Login button
- tapOn: "login"

# Tap on Copnfidence Level
- tapOn: "Confidence"

# Checlk if no data exists in selected filter
- assertVisible: "No results found"
