# System generates visual report from stored data

appId: host.exp.exponent

---
- launchApp

# Tap on PAL-AI
- tapOn: "PAL-AI"

# Navigate to Login
- tapOn:
    id: "login"

# Tap on Username / Email
- tapOn: "Username / Email"
- inputText: "Admin"

- hideKeyboard

# Tap on Password
- tapOn: "Password"
- inputText: "Admin@123"

- hideKeyboard

# Tap on Login button
- tapOn: "login"

# Checlk if Reports exist
- assertVisible: "Reports"
